test/integration/bad/unnormalized/lupmf_in_trans_params.stan
data {
    int d;
}
transformed parameters {
    real y;
    real x = poisson_lupmf(d | y);
}